@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-04T00:55:28Z",
-  "count_outdated" : 326,
-  "uniques_outdated" : 173,
-  "count" : 341,
-  "uniques" : 183,
+  "timestamp" : "2022-06-04T08:13:11Z",
+  "count_outdated" : 328,
+  "uniques_outdated" : 175,
+  "count" : 342,
+  "uniques" : 184,
   "clones" : [
-    {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-05-29T00:00:00Z",
       "count": 2,
@@ -51,6 +44,13 @@
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
