@@ -1,12 +1,7 @@
 {
-  "count": 15,
-  "uniques": 4,
+  "count": 14,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-05-29T00:00:00Z",
       "count": 2,
@@ -35,6 +30,11 @@
     {
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
